<resources>
    <string name="app_name">BestFarmer_v1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Welcome</string>
    <string name="user_name">Indika Udaya</string>
    <string name="notification_number">00</string>
    <string name="buy_now">Buy Now</string>
    <string name="see_all">See all</string>
    <string name="popular_foods">Popular Foods</string>
    <string name="food_title_name">Banana</string>
    <string name="food_price">LKR 2500.00</string>
    <string name="reviews">Reviews</string>
    <string name="reviews_count">10</string>
    <string name="my_cart">My Cart</string>
    <string name="delivery">Delivery</string>
    <string name="information">Information</string>
    <string name="delivery_address">108/3, Embaraluwa North, Temple Road, Weliweriya.</string>
    <string name="your_delivery_address">Your Delivery Address</string>
    <string name="payment_method">Cash</string>
    <string name="order_now">Order Now</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="price_unit">"LKR "</string>
    <string name="watchlist">Watchlist</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_to_the_system">Login to the system</string>
    <string name="sign_in_with_facebook_account">sign in with facebook account</string>
    <string name="sign_in_with_google_account">sign in with google account</string>
    <string name="don_t_have_an_account_please_register">Don\'t have an account, register</string>
    <string name="background_image_signup">background image signup</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_account_to_continue">Create account to continue!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="select_farm_shop_location">Select farm/shop location</string>
    <string name="back_button">back button</string>
    <string name="shop_name">Shop Name</string>
    <string name="by_creating_account_you_agree_to_term_of_services">By creating account, you agree to Term of Services</string>
    <string name="sign_up">sign up</string>
    <string name="shop_address">Shop Address</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="otp_msg_for_mobile_view_text">We will send you an One Time Password code to this number</string>
    <string name="country_code">+94</string>
    <string name="hint_mobile_number">774074745</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_the_otp_code">Enter the OTP code</string>
    <string name="having_problem">Having Problem?</string>
    <string name="resend_again">RESEND AGAIN!</string>
    <string name="verify">Verify</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_email_address">We will send you a verification code to this email</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="example_mail_address">example@mail.com</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="rating_face">rating face</string>
    <string name="rate_this_seller">Rate This Seller</string>
    <string name="short_description_seller_rating">Rating this seller</string>
    <string name="rating_description">Description</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="rate_now">Rate Now</string>
    <string name="farmer_s_name">Farmer\'s Name</string>
    <string name="farmer_image">farmer\'s image</string>
    <string name="ratings_and_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="rating_count">3.4</string>
    <string name="buyer_name">buyer name</string>
    <string name="score_2_5">Score : </string>
    <string name="buyer_comment">buyer comment</string>
    <string name="review_date">review date</string>
    <string name="explorer">Explorer</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="order">Order List</string>
    <string name="add_product">Add Product</string>

    <string name="base_url">http://10.0.2.2:8080/best-farmer/</string>

    <string name="delivery_available">Delivery Available</string>
    <string name="wholesale">Wholesale</string>
    <string name="retail">Retail</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_listing">Product Listing</string>
    <string name="product_images">Product Images</string>
    <string name="submit">Submit</string>
    <string name="select_category">Select Category</string>
    <string name="product_description">Product Description</string>
    <string name="product_quantity">Product Quantity</string>

    <string name="security_api_store">SECURITY_API</string>

    <string name="loading_description">Loading Description</string>
    <string name="seller_review">Seller Review</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about">About</string>
    <string name="seller_menu">seller menu</string>
    <string name="home">Home</string>
    <string name="search_by_food_name_or_category">Search by food name or category</string>
    <string name="payment_processing">Payment Processing</string>
    <string name="seller_name">Seller Name</string>
    <string name="seller_email">Seller Email</string>
    <string name="seller_mobile">Seller Mobile</string>
    <string name="search">Search</string>
</resources>