<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/all_corners_round">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/all_corners_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_back"
            android:textSize="34sp" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:id="@+id/emailMain"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:padding="3dp"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:endIconMode="clear_text"
            app:helperText="Required*"
            app:helperTextTextColor="@color/danger"
            app:startIconDrawable="@drawable/email_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/passwordMain"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="password_toggle"
            app:helperText="Required*"
            app:helperTextTextColor="@color/danger"
            app:hintAnimationEnabled="true"
            app:startIconDrawable="@drawable/lock_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:contentDescription="@string/login_to_the_system"
            android:scaleType="fitXY"
            android:src="@drawable/login_button" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:background="@color/gray" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:contentDescription="@string/sign_in_with_google_account"
            android:scaleType="fitXY"
            android:src="@drawable/sign_in_with_google" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:contentDescription="@string/sign_in_with_facebook_account"
            android:scaleType="fitXY"
            android:src="@drawable/sign_in_with_fb" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center|bottom"
            android:text="@string/don_t_have_an_account_please_register"
            android:textColor="@color/danger"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>