<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_corners_round">

    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:background="@drawable/all_corners_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_drop_down_circle_24" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/getting_started"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_account_to_continue"
                android:textColor="@color/warning"
                android:textSize="19sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailMain"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:hint="@string/email"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="@color/danger"
                app:startIconDrawable="@drawable/email_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fNameMain"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/first_name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="@color/danger"
                app:startIconDrawable="@drawable/name_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lNameMain"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/last_name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/danger"
                app:startIconDrawable="@drawable/name_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileMain"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile_number"
                app:counterEnabled="true"
                app:counterMaxLength="9"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="@color/danger"
                app:prefixText="+94"
                app:startIconDrawable="@drawable/call_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone|numberSigned"
                    android:maxLength="9"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send_verification_code"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="password_toggle"
                app:helperText="Required*"
                app:helperTextTextColor="@color/danger"
                app:hintAnimationEnabled="true"
                app:startIconDrawable="@drawable/lock_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:soundEffectsEnabled="true"
                    android:text="@string/seller"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:soundEffectsEnabled="true"
                    android:text="@string/buyer"
                    android:textStyle="bold" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/layoutSeller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_farm_shop_location"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.fragment.app.FragmentContainerView xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shopNameMain"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:hint="@string/shop_name"
                    android:padding="3dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="50"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/danger"
                    app:startIconDrawable="@drawable/shop_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shopName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="50"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shopAddressMain"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:hint="@string/shop_address"
                    app:counterEnabled="true"
                    app:counterMaxLength="150"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/danger"
                    app:startIconDrawable="@drawable/shop_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shopAddress"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:inputType="textMultiLine"
                        android:maxLength="150"
                        android:maxLines="5"
                        android:scrollbarStyle="insideOverlay"
                        android:scrollbars="vertical"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/agreeCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/by_creating_account_you_agree_to_term_of_services"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/sign_up"
                android:src="@drawable/sign_up" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>