<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/all_corners_round"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/product_images"
        android:src="@drawable/add_product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/cart_fill" />

            <TextView
                android:id="@+id/cartCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="0" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/watchlist_fill" />

            <TextView
                android:id="@+id/watchlistCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="0" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>