<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/all_corners_round"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/otp_send" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/verify_email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/verify_email_address"
            android:textColor="@color/grey_font"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/email"
            android:textColor="@color/grey_font"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPhone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/example_mail_address"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="16sp"
                android:text="@string/send_verification_code"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>